--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
 <LinearLayout
-    android:background="#e19729"
+    android:background="#3b000000"
     android:orientation="vertical"
     android:id="@+id/top"
     android:layout_width="match_parent"
