--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,26 +6,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<android.support.v7.widget.RecyclerView
-    android:layout_below="@+id/button"
-    android:id="@+id/recycler"
+<LinearLayout
+    android:background="#c12727"
+    android:orientation="vertical"
+    android:id="@+id/top1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
-
-<RelativeLayout
-    android:id="@+id/empty"
-    android:visibility="invisible"
-    android:layout_centerInParent="true"
-    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
-    <TextView
-        android:text="No data"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-</RelativeLayout>
-<Button
-    android:id="@+id/button"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"></RelativeLayout>
+</LinearLayout>
 
 </RelativeLayout>
