--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,20 +5,29 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-<LinearLayout
-    android:background="#c12727"
-    android:orientation="vertical"
-    android:id="@+id/top1"
+<RelativeLayout
+    android:id="@+id/nav"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"></RelativeLayout>
-</LinearLayout>
+        android:layout_height="wrap_content">
+        <com.ebs.android_base_utility.base.util.NavigationBar
+            android:background="#c12727"
+            android:orientation="vertical"
+            android:id="@+id/top1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"></RelativeLayout>
+        </com.ebs.android_base_utility.base.util.NavigationBar>
+    </RelativeLayout>
+</RelativeLayout>
+
 
     <RelativeLayout
-        android:layout_below="@+id/top1"
+        android:layout_below="@+id/nav"
         android:background="#599b47"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></RelativeLayout>
